[add] 调整接口，增加前端页面

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ logging.config=classpath:logback.xml
 
 image.tmp.path=C:\\E\\Java\\myProject\\lost-lambs\\image-tmp
 image.save.path=
+
+spring.freemarker.content-type=text/html
+spring.freemarker.template-loader-path=classpath:/static/
+spring.freemarker.enabled=true
